--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html>
 
 <head>
-  <title>Page Title</title>
-
-  
+  <meta charset="utf-8">
+  <title>Landtagswahlen in NRW 2017</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
@@ -37,7 +36,7 @@
 	<section class="container -landtagswahlen">
 		<h2>Landtagswahlen <span>/ 2017</span></h2>
 
-		<div class="row">	
+		<div class="row">
 			<article class="col-md-6">
 				<p>Am 14. Mai 2017 ist es wieder soweit - NRW geht wählen. Und das solltest DU auch tun! Im Jungel der Politik herauszufinden was man wählen soll, ist gar nicht so leicht. Außerdem - Was wollen die Politiker eigentlich bewirken? Was für Pläne haben die? Mehrheit und Ministerpräsidenten, Bundeskanzler und Bundespräsident? Ich versteh’ sowieso nur Bahnhof von diesem “Politik-Ding”!</p>
 			</article>
