adds fonts and global font-style

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Landtagswahlen in NRW 2017</title>
-  <link rel="stylesheet" type="text/css" href="css/main.css">
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">  
 </head>
 
 <body>
@@ -34,7 +34,7 @@
 	</header>
 
 	<section class="container -landtagswahlen">
-		<h2>Landtagswahlen <span>/ 2017</span></h2>
+		<h2>Landtagswahlen 2017</h2>
 
 		<div class="row">
 			<article class="col-md-6">
