--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Landtagswahlen in NRW 2017</title>
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="css/main.css">  
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 
 <body>
@@ -50,12 +50,7 @@
 	</section>
 
 </body>
-
-<script src="js/bootstrap.min.js" type="text/javascript"></script>
-
-<script src="//code.jquery.com/jquery-2.2.1.min.js" integrity="sha256-gvQgAFzTH6trSrAWoH1iPo9Xc96QxSZ3feW6kem+O00=" crossorigin="anonymous"></script>
-
-
-<script src="js/init.js"></script>
-
+<script src="//code.jquery.com/jquery-3.1.1.min.js" />
+<script src="js/bootstrap.min.js" type="text/javascript" />
+<script src="js/init.js" />
 </html>
