--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 	</nav>
 
 	<header class="container-full">
-		<article class="container">
-			<img class="col-xs-5 _logo" src="http://placehold.it/200x200" alt="">
-			<h1 class="col-xs-7 _subheadline">Die Qual oder die Wahl?</h1>
-			<h1 class="col-xs-7 _headline">Es ist Deine Entscheidung!</h1>
-		</article>
+		<section class="container">
+			<img class="_logo" src="http://placehold.it/200x200" alt="">
+        <h1 class="_subheadline">Die Qual oder die Wahl?</h1>
+			  <h1 class="_headline">Es ist Deine Entscheidung!</h1>
+		</section>
 	</header>
 
 	<section class="container -landtagswahlen">
@@ -47,10 +47,12 @@
 		</div>
 
 		<a href="" class="btn">Zur Sonntagswahl</a>
+
+    <img src="http://placehold.it/1920x500" alt="" />
 	</section>
 
 </body>
-<script src="//code.jquery.com/jquery-3.1.1.min.js" />
+<script src="js/jquery-3.1.1.min.js" />
 <script src="js/bootstrap.min.js" type="text/javascript" />
 <script src="js/init.js" />
 </html>
