adds favicons for all common devices, adds some hover styles

--- a/index.html
+++ b/index.html
@@ -1,34 +1,53 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8">
+  <meta name="description" content="Landtagswahlen 2017 in NRW Warum sollte ich wählen gehen?">
+  <meta name="keywords" content="Landtagswahlen Nordrhein-Westfalen, Politik, NRW, Wieso Wählen, Sonntagsfrage">
+  <meta name="author" content="Dustin Clever und Virginia Dächer">
+  <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,maximum-scale=1,shrink-to-fit=no">
   <title>Landtagswahlen in NRW 2017</title>
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link rel="apple-touch-icon" sizes="57x57" href="img/favicons/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="img/favicons/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="img/favicons/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="img/favicons/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="img/favicons/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="img/favicons/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="img/favicons/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="img/favicons/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="img/favicons/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="img/favicons/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicons/favicon-16x16.png">
+  <link rel="manifest" href="images/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="images/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
 </head>
-
 <body>
-
-	<nav class="container-full">
+<section class="container-full">
+	<nav>
 		<button class="navbar-toggle">
 			<span class="line"></span>
 			<span class="line"></span>
 			<span class="line"></span>
 		</button>
 		<ul class="hamburger-nav">
-			<li><span class="_icon-cross"></span>Landtagswahlen</li>
-			<li><span class="_icon-diagram"></span>Sonntagsfrage</li>
-			<li><span class="_icon-programs"></span>Parteiprogramme</li>
-			<li><span class="_icon-question"></span>Warum wählen</li>
-			<li><span class="_icon-abc"></span>Politik ABC</li>
+			<li><span class="_icon-cross"></span><a href="index.html" title="Zur Startseite">Landtagswahlen</a></li>
+			<li><span class="_icon-diagram"></span><a href="#" title="Nehme jetzt an der Sonntagsfrage teil.">Sonntagsfrage</a></li>
+			<li><span class="_icon-programs"></span><a href="#" title="Erfahre mehr über die Parteien der Landtagswahl NRW..">Parteiprogramme</ah></li>
+			<li><span class="_icon-question"></span><a href="#" title="Warum sollte man wählen gehen?">Warum wählen</a></li>
+			<li><span class="_icon-abc"></span><a href="#" title="Das Fachchinesisch der Politik">Politik ABC</a></li>
 		</ul>
 	</nav>
 
-	<header class="container-full">
-		<section class="container">
-			<!--<img class="_logo" src="http://placehold.it/200x200" alt="">-->
-      <svg class="_logo" version="1.1" id="Ebene_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	<header>
+		<section class="row container">
+    <article class="col-xs-4 col-md-2">
+      <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	       viewBox="0 0 500 500" style="enable-background:new 0 0 500 500;" xml:space="preserve">
         <g>
         	<g>
@@ -105,8 +124,10 @@
         		</g>
         </g>
         </svg>
-        <h1 class="_subheadline">Die Qual oder die Wahl?</h1>
-			  <h1 class="_headline">Es ist Deine Entscheidung!</h1>
+      </article>
+      <article class="col-xs-8 col-md-10">
+        <h1>Die Qual oder die Wahl? Es ist Deine Entscheidung!</h1>
+      </article>
 		</section>
 	</header>
 
@@ -119,14 +140,12 @@
 			</article>
 
 			<article class="col-md-6">
-				<p>Dies sind vielleicht fragen, die du dir stellst. Aber diese Fragen haben viele, auch wir. Und wir versuchen diese zu beantworten. Unter dem Punkt “Sonntagsfrage” kannst du schon vorher eine Wahl treffen und sehen was das Ergebnis wäre, wenn heute der Tag der Wahl wäre.</p>
+				<p>Dies sind vielleicht fragen, die du dir stellst. Aber diese Fragen haben viele, auch wir. Und wir versuchen diese zu beantworten. Unter dem Punkt <a href="#">“Sonntagsfrage”</a> kannst du schon vorher eine Wahl treffen und sehen was das Ergebnis wäre, wenn heute der Tag der Wahl wäre.</p>
 			</article>
 		</div>
-
-		<a href="" class="btn">Zur Sonntagswahl</a>
-
-    <img src="http://placehold.it/1920x500" alt="" />
-	</section>
+    <a href="#" class="btn">Zur Sonntagswahl</a>
+  </section>
+</section>
 
 </body>
 <script src="js/jquery-3.1.1.min.js" />
