changes style of the mobile header

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 	</nav>
 
 	<header>
-		<section class="row container">
-    <article class="col-xs-4 col-md-2">
+		<section class="row text-center">
+    <article class="col-xs-12 col-sm-2">
       <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	       viewBox="0 0 500 500" style="enable-background:new 0 0 500 500;" xml:space="preserve">
         <g>
@@ -125,7 +125,7 @@
         </g>
         </svg>
       </article>
-      <article class="col-xs-8 col-md-10">
+      <article class="col-xs-12 col-sm-10">
         <h1>Die Qual oder die Wahl? Es ist Deine Entscheidung!</h1>
       </article>
 		</section>
@@ -143,12 +143,14 @@
 				<p>Dies sind vielleicht fragen, die du dir stellst. Aber diese Fragen haben viele, auch wir. Und wir versuchen diese zu beantworten. Unter dem Punkt <a href="#">“Sonntagsfrage”</a> kannst du schon vorher eine Wahl treffen und sehen was das Ergebnis wäre, wenn heute der Tag der Wahl wäre.</p>
 			</article>
 		</div>
-    <a href="#" class="btn">Zur Sonntagswahl</a>
+    <section class="row text-center">
+      <a href="#" class="btn">Zur Sonntagswahl</a>
+    </section>
   </section>
 </section>
 
 </body>
-<script src="js/jquery-3.1.1.min.js" />
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="js/bootstrap.min.js" type="text/javascript" />
 <script src="js/init.js" />
 </html>
