fixes some navigation bugs

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     		</section>
     	</header>
 
-    	<section class="main-content">
+    	<section class="main">
     		<h2>Landtagswahlen 2017</h2>
 
     		<section class="row">
