--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section class="container-full">
     <nav class="desktop-nav">
       <ul>
-        <li><span class="_icon-cross"></span><a href="index.html" title="Zur Startseite">Landtagswahlen</a></li>
+        <li><span class="_icon-cross"></span><a class="current" href="index.html" title="Zur Startseite">Landtagswahlen</a></li>
         <li><span class="_icon-diagram"></span><a href="#" title="Nehme jetzt an der Sonntagsfrage teil.">Sonntagsfrage</a></li>
         <li><span class="_icon-programs"></span><a href="#" title="Erfahre mehr über die Parteien der Landtagswahl NRW..">Parteiprogramme</ah></li>
         <li><span class="_icon-question"></span><a href="#" title="Warum sollte man wählen gehen?">Warum wählen</a></li>
@@ -48,14 +48,14 @@
             <span class="line"></span>
           </button>
           <ul class="hamburger-nav">
-            <li><span class="_icon-cross"></span><a href="index.html" title="Zur Startseite">Landtagswahlen</a></li>
+            <li><span class="_icon-cross"></span><a class="current-mobile" href="index.html" title="Zur Startseite">Landtagswahlen</a></li>
             <li><span class="_icon-diagram"></span><a href="#" title="Nehme jetzt an der Sonntagsfrage teil.">Sonntagsfrage</a></li>
             <li><span class="_icon-programs"></span><a href="#" title="Erfahre mehr über die Parteien der Landtagswahl NRW..">Parteiprogramme</ah></li>
             <li><span class="_icon-question"></span><a href="#" title="Warum sollte man wählen gehen?">Warum wählen</a></li>
             <li><span class="_icon-abc"></span><a href="#" title="Das Fachchinesisch der Politik">Politik ABC</a></li>
           </ul>
         </nav>
-    		<section class="row header-flex">  
+    		<section class="row header-flex">
           <svg class="logo" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
              viewBox="0 0 500 500" style="enable-background:new 0 0 500 500;" xml:space="preserve">
             <g>
