adds style to desktop-nav

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section class="container-full">
     <nav class="desktop-nav">
       <ul>
-        <li><span class="_icon-cross"></span><a class="current" href="index.html" title="Zur Startseite">Landtagswahlen</a></li>
+        <li class="current"><span class="_icon-cross"></span><a href="index.html" title="Zur Startseite">Landtagswahlen</a></li>
         <li><span class="_icon-diagram"></span><a href="#" title="Nehme jetzt an der Sonntagsfrage teil.">Sonntagsfrage</a></li>
         <li><span class="_icon-programs"></span><a href="#" title="Erfahre mehr über die Parteien der Landtagswahl NRW..">Parteiprogramme</ah></li>
         <li><span class="_icon-question"></span><a href="#" title="Warum sollte man wählen gehen?">Warum wählen</a></li>
