adds background-img to wrapper

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <meta name="theme-color" content="#ffffff">
 </head>
 <body>
-  <div class="wrapper">
+  <div class="wrapper landtagswahlen">
     <section class="container-full">
     <nav class="desktop-nav">
       <ul>
