--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     <section class="container-full">
     <nav class="desktop-nav">
       <ul>
-        <li class="current"><span class="_icon -cross"></span><a href="index.html" title="Zur Startseite">Landtagswahlen</a></li>
-        <li><span class="_icon -diagram"></span><a href="#" title="Nehme jetzt an der Sonntagsfrage teil.">Sonntagsfrage</a></li>
-        <li><span class="_icon -programs"></span><a href="#" title="Erfahre mehr über die Parteien der Landtagswahl NRW..">Parteiprogramme</ah></li>
-        <li><span class="_icon -question"></span><a href="#" title="Warum sollte man wählen gehen?">Warum wählen</a></li>
-        <li><span class="_icon -abc"></span><a href="#" title="Das Fachchinesisch der Politik">Politik ABC</a></li>
+        <li class="current"><img src="img/icons/landtagswahlen.svg" alt="" /><a href="index.html" title="Zur Startseite">Landtagswahlen</a></li>
+        <li><img src="img/icons/diagram.svg" alt="" /><a href="#" title="Nehme jetzt an der Sonntagsfrage teil.">Sonntagsfrage</a></li>
+        <li><img src="img/icons/party-program.svg" alt="" /><a href="#" title="Erfahre mehr über die Parteien der Landtagswahl NRW">Parteiprogramme</a></li>
+        <li><img src="img/icons/questionmark.svg" alt="" /><a href="#" title="Warum sollte man wählen gehen?">Warum wählen</a></li>
+        <li><img src="img/icons/politik-abc.svg" alt="" /><a href="#" title="Das Fachchinesisch der Politik">Politik ABC</a></li>
       </ul>
     </nav>
     <main>
@@ -48,11 +48,11 @@
             <span class="line"></span>
           </button>
           <ul class="hamburger-nav">
-            <li><span class="_icon -cross"></span><a class="current-mobile" href="index.html" title="Zur Startseite">Landtagswahlen</a></li>
-            <li><span class="_icon -diagram"></span><a href="#" title="Nehme jetzt an der Sonntagsfrage teil.">Sonntagsfrage</a></li>
-            <li><span class="_icon -programs"></span><a href="#" title="Erfahre mehr über die Parteien der Landtagswahl NRW..">Parteiprogramme</ah></li>
-            <li><span class="_icon -question"></span><a href="#" title="Warum sollte man wählen gehen?">Warum wählen</a></li>
-            <li><span class="_icon -abc"></span><a href="#" title="Das Fachchinesisch der Politik">Politik ABC</a></li>
+            <li><a class="current-mobile" href="index.html" title="Zur Startseite">Landtagswahlen</a></li>
+            <li><a href="#" title="Nehme jetzt an der Sonntagsfrage teil.">Sonntagsfrage</a></li>
+            <li><a href="#" title="Erfahre mehr über die Parteien der Landtagswahl NRW.">Parteiprogramme</a></li>
+            <li><a href="#" title="Warum sollte man wählen gehen?">Warum wählen</a></li>
+            <li><a href="#" title="Das Fachchinesisch der Politik">Politik ABC</a></li>
           </ul>
         </nav>
     		<section class="row header-flex">
