some edits to sonntagsfrage.php and adds warum-waehlen.html

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     <nav class="desktop-nav">
       <ul>
         <li class="current"><img src="img/icons/landtagswahlen.svg" alt="Vote-Icon" /><a href="index.html" title="Zur Startseite">Landtagswahlen</a></li>
-        <li><img src="img/icons/diagram.svg" alt="Diagram-Icon" /><a href="content/sonntagsfrage_neu.php" title="Nehme jetzt an der Sonntagsfrage teil.">Sonntagsfrage</a></li>
+        <li><img src="img/icons/diagram.svg" alt="Diagram-Icon" /><a href="content/sonntagsfrage.php" title="Nehme jetzt an der Sonntagsfrage teil.">Sonntagsfrage</a></li>
         <li><img src="img/icons/party-program.svg" alt="Parteien-Icon" /><a href="#" title="Erfahre mehr über die Parteien der Landtagswahl NRW">Parteiprogramme</a></li>
-        <li><img src="img/icons/questionmark.svg" alt="Fragezeichen-Icon" /><a href="#" title="Warum sollte man wählen gehen?">Warum wählen</a></li>
+        <li><img src="img/icons/questionmark.svg" alt="Fragezeichen-Icon" /><a href="content/warum-waehlen.html" title="Warum sollte man wählen gehen?">Warum wählen</a></li>
         <li><img src="img/icons/politik-abc.svg" alt="Politik-ABC-Icon" /><a href="#" title="Das Fachchinesisch der Politik">Politik ABC</a></li>
       </ul>
     </nav>
@@ -49,14 +49,14 @@
           </button>
           <ul class="hamburger-nav">
             <li><a class="current-mobile" href="index.html" title="Zur Startseite">Landtagswahlen</a></li>
-            <li><a href="content/sonntagsfrage_neu.php" title="Nehme jetzt an der Sonntagsfrage teil.">Sonntagsfrage</a></li>
+            <li><a href="content/sonntagsfrage.php" title="Nehme jetzt an der Sonntagsfrage teil.">Sonntagsfrage</a></li>
             <li><a href="#" title="Erfahre mehr über die Parteien der Landtagswahl NRW.">Parteiprogramme</a></li>
-            <li><a href="#" title="Warum sollte man wählen gehen?">Warum wählen</a></li>
+            <li><a href="content/warum-waehlen.html" title="Warum sollte man wählen gehen?">Warum wählen</a></li>
             <li><a href="#" title="Das Fachchinesisch der Politik">Politik ABC</a></li>
           </ul>
         </nav>
     		<div class="header-flex">
-          <svg class="logo" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+        <svg class="logo" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
           viewBox="0 0 500 500" style="enable-background:new 0 0 500 500;" xml:space="preserve">
             <g>
               <g>
