--- a/content/warum-waehlen.html
+++ b/content/warum-waehlen.html
@@ -33,9 +33,9 @@
       <nav class="desktop-nav">
         <ul>
           <li><img src="../img/icons/landtagswahlen.svg" alt="Vote-Icon" /><a href="../index.html" title="Zur Startseite">Landtagswahlen</a></li>
-          <li class="current"><img src="../img/icons/diagram.svg" alt="Diagram-Icon" /><a href="sonntagsfrage_neu.php" title="Nehme jetzt an der Sonntagsfrage teil.">Sonntagsfrage</a></li>
+          <li class="current"><img src="../img/icons/diagram.svg" alt="Diagram-Icon" /><a href="sonntagsfrage.php" title="Nehme jetzt an der Sonntagsfrage teil.">Sonntagsfrage</a></li>
           <li><img src="../img/icons/party-program.svg" alt="Parteien-Icon" /><a href="#" title="Erfahre mehr über die Parteien der Landtagswahl NRW">Parteiprogramme</a></li>
-          <li><img src="../img/icons/questionmark.svg" alt="Fragezeichen-Icon" /><a href="#" title="Warum sollte man wählen gehen?">Warum wählen</a></li>
+          <li><img src="../img/icons/questionmark.svg" alt="Fragezeichen-Icon" /><a href="warum-waehlen.html" title="Warum sollte man wählen gehen?">Warum wählen</a></li>
           <li><img src="../img/icons/politik-abc.svg" alt="Politik-ABC-Icon" /><a href="#" title="Das Fachchinesisch der Politik">Politik ABC</a></li>
         </ul>
       </nav>
@@ -49,9 +49,9 @@
             </button>
             <ul class="hamburger-nav">
               <li><a class="current-mobile" href="../index.html" title="Zur Startseite">Landtagswahlen</a></li>
-              <li><a href="#" title="Nehme jetzt an der Sonntagsfrage teil.">Sonntagsfrage</a></li>
+              <li><a href="sonntagsfrage.php" title="Nehme jetzt an der Sonntagsfrage teil.">Sonntagsfrage</a></li>
               <li><a href="#" title="Erfahre mehr über die Parteien der Landtagswahl NRW.">Parteiprogramme</a></li>
-              <li><a href="#" title="Warum sollte man wählen gehen?">Warum wählen</a></li>
+              <li><a href="warum-waehlen.html" title="Warum sollte man wählen gehen?">Warum wählen</a></li>
               <li><a href="#" title="Das Fachchinesisch der Politik">Politik ABC</a></li>
             </ul>
           </nav>
@@ -139,48 +139,21 @@
           </header>
 
           <div class="main-content">
-            <h1>Die Sonntagsfrage</h1>
+            <h1>Warum solltest Du wählen gehen?</h1>
             <section>
               <article>
-                <p>Jetzt kannst du dich entscheiden. Finde heraus wie das Wahlergebnis ausfallen würde, wenn heute der Tag der Tage wäre. Entscheide dich einfach für eine der sechs Parteien. Auf dem echten Wahlbogen gibt es natürlich viel mehr Parteien. Für dich haben wir die Probewahl auf die sechs größten Parteien beschränkt. Klicke auf eine der Parteien und anschließend auf “Abstimmen”. Dann siehst du sofort die derzeitige Wahlprognose.</p>
+                <p>Die Qual oder die Wahl, und du entscheidest mit. Wenn du nicht wählen gehst, machen es andere. Und dann heißt es - “mimimi”, das find ich jetzt aber doof. Das ist wie damals mit der Klassensprecherwahl. Du hast dich enthalten und Aileen schlägt nur Radevormwald und Rosenheim für die Klassenfahrt vor. Vielleicht wäre es besser gewesen, Max zu wählen, dann wär es an den Gardasee gegangen.</p>
+                <p>Die drei wichtigsten Gründe, warum du unbedingt wählen gehen solltest:</p>
               </article>
-              <div class="sonntagsfrage-flex">
-                <form name="wahlen" method="post" action="sonntagsfrage_ausgabe.php">
-                  <div>
-                    <input type="radio" name="partei" value="linke">
-                    <label>Die Linke</label>
-                  </div>
-
-                  <div>
-                    <input type="radio" name="partei" value="spd">
-                    <label>SPD</label>
-                  </div>
-
-                  <div>
-                    <input type="radio" name="partei" value="gruenen">
-                    <label>Die Grünen</label>
-                  </div>
-
-                  <div>
-                    <input type="radio" name="partei" value="fdp">
-                    <label>FDP</label>
-                  </div>
-
-                  <div>
-                    <input type="radio" name="partei" value="cdu">
-                    <label>CDU</label>
-                  </div>
-
-                  <div>
-                    <input type="radio" name="partei" value="afd">
-                    <label>AfD</label>
-                  </div>
-                  <div>
-                    <button type="submit" value="eintragen">Jetzt wählen</button>
-                  </div>
-                </form>
+              <div class="waehlen-flex">
+                <h3>1. Weil es Dein Recht ist!</h3>
+                <p>Es ist schlicht und einfach dein Recht, wählen zu gehen. Deine Vorfahren haben schon dafür gekämpft, mitentscheiden zu können und haben die Demokratie eingeführt. In vielen Ländern ist es keine Selbstverständlichkeit zu wählen und mit zu bestimmen  zu dürfen. Das solltest du dir bewusst machen, damit dieses Recht durch hohe Wahlbeteiligung bestehen bleibt.</p>
+                <h3>2. Weil jede Stimme zählt!</h3>
+                <p>In Deutschland ist jede Stimme gleich viel Wert. Deine einzelne Stimme wird natürlich nicht wahlentscheidend sein, aber jede einzelne Stimme trägt dazu bei, einem Kandidaten oder einer Partei den Zuspruch zu gestatten. Außerdem erhält man ein repräsentatives Bild der Gesamtbevölkerung.</p>
+                <h3>3. Weil andere entscheiden, wenn du nicht wählst!</h3>
+                <p>Wenn du nicht wählst, machen es andere. Am Ende bist du vielleicht unzufrieden mit den Entscheidungen, die der Gewählte trifft. Natürlich kann es sein, dass sich deine gewählte Partei bzw. dein gewünschter Kandidat gar nicht gewinnt. Aber wenigstens hast du ihm deine Stimme gegeben und weißt, dass du dein bestmöglichstes getan hast.</p>
+              </div>
               </section>
-            </div>
           </div>
         </main>
       </section>
