changes some texts and adds parteiprogramme and politik-abc

--- a/content/parteiprogramme.html
+++ b/content/parteiprogramme.html
@@ -33,8 +33,8 @@
       <nav class="desktop-nav">
         <ul>
           <li><img src="../img/icons/landtagswahlen.svg" alt="Vote-Icon" /><a href="../index.html" title="Zur Startseite">Landtagswahlen</a></li>
-          <li class="current"><img src="../img/icons/diagram.svg" alt="Diagram-Icon" /><a href="sonntagsfrage.php" title="Nehme jetzt an der Sonntagsfrage teil.">Sonntagsfrage</a></li>
-          <li><img src="../img/icons/party-program.svg" alt="Parteien-Icon" /><a href="parteiprogramme.html" title="Erfahre mehr über die Parteien der Landtagswahl NRW">Parteiprogramme</a></li>
+          <li><img src="../img/icons/diagram.svg" alt="Diagram-Icon" /><a href="sonntagsfrage.php" title="Nehme jetzt an der Sonntagsfrage teil.">Sonntagsfrage</a></li>
+          <li class="current"><img src="../img/icons/party-program.svg" alt="Parteien-Icon" /><a href="parteiprogramme.html" title="Erfahre mehr über die Parteien der Landtagswahl NRW">Parteiprogramme</a></li>
           <li><img src="../img/icons/questionmark.svg" alt="Fragezeichen-Icon" /><a href="warum-waehlen.html" title="Warum sollte man wählen gehen?">Warum wählen</a></li>
           <li><img src="../img/icons/politik-abc.svg" alt="Politik-ABC-Icon" /><a href="politik-abc.html" title="Das Fachchinesisch der Politik">Politik ABC</a></li>
         </ul>
@@ -139,48 +139,20 @@
           </header>
 
           <div class="main-content">
-            <h1>Die Sonntagsfrage</h1>
+            <h1>Parteiprogramme</h1>
             <section>
               <article>
-                <p>Jetzt kannst du dich entscheiden. Finde heraus wie das Wahlergebnis ausfallen würde, wenn heute der Tag der Tage wäre. Entscheide dich einfach für eine der sechs Parteien. Auf dem echten Wahlbogen gibt es natürlich viel mehr Parteien. Für dich haben wir die Probewahl auf die sechs größten Parteien beschränkt. Klicke auf eine der Parteien und anschließend auf “Abstimmen”. Dann siehst du sofort die derzeitige Wahlprognose.</p>
+                <p>Was wollen die eigentlich von mir? Ich verstehe nur Bahnhof? Hier kannst du dich über die jeweils drei wichtigsten Fakten aus den Wahlprogrammen der Parteien informieren:</p>
               </article>
-              <div class="sonntagsfrage-flex">
-                <form name="wahlen" method="post" action="sonntagsfrage_ausgabe.php">
-                  <div>
-                    <input type="radio" name="partei" value="linke">
-                    <label>Die Linke</label>
-                  </div>
-
-                  <div>
-                    <input type="radio" name="partei" value="spd">
-                    <label>SPD</label>
-                  </div>
-
-                  <div>
-                    <input type="radio" name="partei" value="gruenen">
-                    <label>Die Grünen</label>
-                  </div>
-
-                  <div>
-                    <input type="radio" name="partei" value="fdp">
-                    <label>FDP</label>
-                  </div>
-
-                  <div>
-                    <input type="radio" name="partei" value="cdu">
-                    <label>CDU</label>
-                  </div>
-
-                  <div>
-                    <input type="radio" name="partei" value="afd">
-                    <label>AfD</label>
-                  </div>
-                  <div>
-                    <button type="submit" value="eintragen">Jetzt wählen</button>
-                  </div>
-                </form>
+              <div class="parteiprogramme-flex">
+                <h3>Die Linke</h3>
+                <h3>SPD</h3>
+                <h3>Die Grünen</h3>
+                <h3>FDP</h3>
+                <h3>CDU</h3>
+                <h3>AfD</h3>
               </div>
-            </section>
+              </section>
           </div>
         </main>
       </section>
