--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
       <ul>
         <li class="current"><img src="img/icons/landtagswahlen.svg" alt="Vote-Icon" /><a href="index.html" title="Zur Startseite">Landtagswahlen</a></li>
         <li><img src="img/icons/diagram.svg" alt="Diagram-Icon" /><a href="content/sonntagsfrage.php" title="Nehme jetzt an der Sonntagsfrage teil.">Sonntagsfrage</a></li>
-        <li><img src="img/icons/party-program.svg" alt="Parteien-Icon" /><a href="#" title="Erfahre mehr über die Parteien der Landtagswahl NRW">Parteiprogramme</a></li>
+        <li><img src="img/icons/party-program.svg" alt="Parteien-Icon" /><a href="content/parteiprogramme.html" title="Erfahre mehr über die Parteien der Landtagswahl NRW">Parteiprogramme</a></li>
         <li><img src="img/icons/questionmark.svg" alt="Fragezeichen-Icon" /><a href="content/warum-waehlen.html" title="Warum sollte man wählen gehen?">Warum wählen</a></li>
-        <li><img src="img/icons/politik-abc.svg" alt="Politik-ABC-Icon" /><a href="#" title="Das Fachchinesisch der Politik">Politik ABC</a></li>
+        <li><img src="img/icons/politik-abc.svg" alt="Politik-ABC-Icon" /><a href="content/politik-abc.html" title="Das Fachchinesisch der Politik">Politik ABC</a></li>
       </ul>
     </nav>
     <main>
@@ -50,9 +50,9 @@
           <ul class="hamburger-nav">
             <li><a class="current-mobile" href="index.html" title="Zur Startseite">Landtagswahlen</a></li>
             <li><a href="content/sonntagsfrage.php" title="Nehme jetzt an der Sonntagsfrage teil.">Sonntagsfrage</a></li>
-            <li><a href="#" title="Erfahre mehr über die Parteien der Landtagswahl NRW.">Parteiprogramme</a></li>
+            <li><a href="content/parteiprogramme.html" title="Erfahre mehr über die Parteien der Landtagswahl NRW.">Parteiprogramme</a></li>
             <li><a href="content/warum-waehlen.html" title="Warum sollte man wählen gehen?">Warum wählen</a></li>
-            <li><a href="#" title="Das Fachchinesisch der Politik">Politik ABC</a></li>
+            <li><a href="content/politik-abc.html" title="Das Fachchinesisch der Politik">Politik ABC</a></li>
           </ul>
         </nav>
     		<div class="header-flex">
@@ -142,10 +142,10 @@
     		<h1>Landtagswahlen 2017</h1>
     		<section class="content-flex">
     			<article>
-    				<p>Am 14. Mai 2017 ist es wieder soweit - NRW geht wählen. Und das solltest DU auch tun! Im Jungel der Politik herauszufinden was man wählen soll, ist gar nicht so leicht. Außerdem - Was wollen die Politiker eigentlich bewirken? Was für Pläne haben die? Mehrheit und Ministerpräsidenten, Bundeskanzler und Bundespräsident? Ich versteh’ sowieso nur Bahnhof von diesem “Politik-Ding”!</p>
+    				<p>Am 14. Mai 2017 ist es wieder soweit: NRW geht wählen. Das solltest DU auch tun! Im Dschungel der Politik herauszufinden, was man wählen soll, ist gar nicht so leicht. Außerdem: Was wollen die Politiker eigentlich bewirken? Welche Pläne haben die? Mehrheit und Ministerpräsidenten, Bundeskanzler und Bundespräsident?</p>
     			</article>
     			<article>
-    				<p>Dies sind vielleicht fragen, die du dir stellst. Aber diese Fragen haben viele, auch wir. Und wir versuchen diese zu beantworten. Unter dem Punkt <a href="#">“Sonntagsfrage”</a> kannst du schon vorher eine Wahl treffen und sehen was das Ergebnis wäre, wenn heute der Tag der Wahl wäre.</p>
+    				<p>Dies sind vielleicht Fragen, die du dir stellst. Aber diese Fragen haben viele. Und wir werden diese Fragen zu beantworten. Unter dem Punkt <a href="content/sonntagsfrage.php" title="Zur Sonntagsfrage">“Sonntagsfrage”</a> kannst du schon vorher eine Wahl treffen und sehen, wie das Ergebnis wäre, wenn heute der Tag der Wahl wäre.</p>
     			</article>
     		</section>
         <section class="row text-center">
