adds text to politik-abc.html

--- a/content/politik-abc.html
+++ b/content/politik-abc.html
@@ -134,26 +134,41 @@
             </g>
           </svg>
           <h2 class="heading1">Die Qual oder die Wahl?</h2>
-            <h2 class="heading2">Es ist Deine Entscheidung!</h2>
-            </div>
-          </header>
+          <h2 class="heading2">Es ist Deine Entscheidung!</h2>
+        </div>
+      </header>
 
-          <div class="main-content">
-            <h1>Politik ABC</h1>
-            <section>
-              <article>
-                <p>Manche Begriffe aus der Politik ergeben keinen Sinn für dich? Gut! Für uns nämlich auch nicht. Deswegen haben wir uns schlau gemacht und hier die 5 seltsamsten Begriffe aus der Politik für dich erklärt.</p>
-              </article>
-              <div class="parteiprogramme-flex">
-                <h3>1. Weil es Dein Recht ist!</h3>
-              </div>
-              </section>
+      <div class="main-content">
+        <h1>Politik ABC</h1>
+        <section>
+          <article>
+            <p>Manche Begriffe aus der Politik ergeben keinen Sinn für dich? Gut! Für uns nämlich auch nicht. Deswegen haben wir uns schlau gemacht und hier die 4 seltsamsten Begriffe aus der Politik für dich erklärt.</p>
+          </article>
+          <div class="parteiprogramme-flex">
+            <article>
+              <h3>Abgeordnete oder Abgeordneter</h3>
+              <p>Ein Abgeordneter wird von den Bürgerinnen und Bürgern eines Landes gewählt, um ihre Interessen in einem Parlament zu vertreten. In Deutschland wählt das Volk seine Abgeordneten in den Bundestag, in den Landtag und in die Volksvertretungen der Städte und Gemeinden.</p>
+            </article>
+            <article>
+              <h3>Bundeskanzler(in)</h3>
+              <p>Der Bundeskanzler ist quasi der Chef der Regierung. Er oder sie trägt die Verantwortung für alle Entscheidungen. In Deutschland kann sowohl ein Mann als auch eine Frau Bundeskanzler werden. Es ist zu beachten, dass der Bundeskanzlerin oder der Bundeskanzler nicht direkt vom Volk, sondern von den Abgeordneten gewählt wird.</p>
+            </article>
+            <article>
+              <h3>Bundespräsident</h3>
+              <p>Der Bundespräsident ist das Oberhaupt der Bundesrepublik Deutschland. Man sagt auch „der erste Mann oder die erste Frau“ in unserem Land. Für dieses Amt muss man mind. 40 Jahre alt sein und jeder Bürger kann sich darum bewerben. Die Bundesversammlung wählt den Bundespräsidenten, der alle Bürgerinnen und Bürger fünf Jahre lang im In- und Ausland vertritt, aber keine politischen Entscheidungen treffen darf.  Er ernennt und entlässt stattdessen Minister, Bundesrichter und den Bundeskanzler. Außerdem beurkundet er die vom Bundestag beschlossenen Gesetze und gibt sie öffentlich im Bundesgesetzblatt bekannt. Er kann aber auch die Unterschrift unter einem Gesetz verweigern. Dann beschäftigen sich die Abgeordneten im Bundestag noch einmal mit diesem Gesetz und suchen nach einer besseren Lösung.</p>
+            </article>
+            <article>
+              <h3>Erststimme</h3>
+              <p>Für die Bundestagswahl hat jeder Wähler zwei Stimmen, die er vergeben kann. Mit der Erststimme kann eine bestimmte Person gewählt werden, die dann als Abgeordneter im Bundestag sitzt. Mit der Zweitstimme wird eine Partei gewählt. So steht nach der Auszählung aller Zweitstimmen fest, wie viele Sitze eine Partei für ihre Kandidaten erhält.</p>
+            </article>
           </div>
-        </main>
-      </section>
-    </div>
-    <script src="../js/jquery-3.1.1.min.js" type="text/javascript"></script>
-    <script src="../js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="../js/init.js" type="text/javascript"></script>
-  </body>
-  </html>
+        </section>
+      </div>
+    </main>
+  </section>
+</div>
+<script src="../js/jquery-3.1.1.min.js" type="text/javascript"></script>
+<script src="../js/bootstrap.min.js" type="text/javascript"></script>
+<script src="../js/init.js" type="text/javascript"></script>
+</body>
+</html>
